// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flags > AustriaFlag > renders AustriaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > AustriaFlag > renders AustriaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M23.254 16.174c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 6.783.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 17.218z"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.746C2.442 20.744 6.84 24 12 24m0-24C6.84 0 2.442 3.257.746 7.826h22.508C21.558 3.257 17.16 0 12 0"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#d5d5d5"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#454545"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BelgiumFlag > renders BelgiumFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M16.174.746A12 12 0 0 0 12 0c-1.468 0-2.874.264-4.174.746L6.783 12l1.043 11.254c1.3.482 2.706.746 4.174.746s2.874-.264 4.174-.746L17.218 12z"
      fill="#ffda44"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#5c5c5c"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#454545"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > BulgariaFlag > renders BulgariaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#496e2d"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#d80027"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#444"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#454545"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.261 0h2.087l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#7b7b7b"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#454545"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CroatiaFlag > renders CroatiaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 12c0-1.468-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174"
      fill="#f0f0f0"
    />
    <path
      d="M12 24c5.16 0 9.558-3.256 11.254-7.826H.747C2.442 20.744 6.84 24 12 24"
      fill="#0052b4"
    />
    <path
      d="M.747 7.826h22.507C21.558 3.256 17.16 0 12 0S2.442 3.257.747 7.826"
      fill="#d80027"
    />
    <path
      d="M15.131 8.348h-2.087l.348-2.609 1.391-1.043 1.391 1.043v2.087zm-6.262 0h2.088l-.348-2.609-1.392-1.043-1.391 1.043v2.087z"
      fill="#338af3"
    />
    <path
      d="M13.391 8.348h-2.783V5.739L12 4.696l1.391 1.043z"
      fill="#0052b4"
    />
    <path
      d="M7.826 7.826v5.74a4.17 4.17 0 0 0 1.678 3.343l.73-.183.922.928a4.2 4.2 0 0 0 1.683 0l1.052-.876.605.13a4.17 4.17 0 0 0 1.678-3.343V7.826z"
      fill="#f0f0f0"
    />
    <path
      d="M7.826 7.826h1.67v1.67h-1.67zm3.339 0h1.669v1.67h-1.669zm3.34 0h1.669v1.67h-1.669zm-5.01 1.67h1.67v1.669h-1.67zm3.34 0h1.67v1.669h-1.67zm-5.009 1.669h1.67v1.669h-1.67zm1.669 1.669h1.67v1.67h-1.67zm1.67-1.669h1.669v1.669h-1.669zm3.34 0h1.669v1.669h-1.669zm-1.67 1.669h1.67v1.67h-1.67zm-1.67 1.67h1.669v1.669h-1.669zm-1.669 0H7.934c.143.621.425 1.188.811 1.67h.751zm5.009 1.67h.75a4.15 4.15 0 0 0 .811-1.67h-1.561zm-5.01 0v.728a4.2 4.2 0 0 0 1.67.753v-1.481zm3.34 0v1.481a4.15 4.15 0 0 0 1.67-.753v-.728z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#8a8a8a"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#d5d5d5"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CyprusFlag > renders CyprusFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#fcfcfc"
    />
    <path
      d="M18.783 10.435h-1.566a5.217 5.217 0 0 1-10.434 0H5.217a6.786 6.786 0 0 0 4.93 6.527 1.74 1.74 0 0 0 .182 1.895l1.706-1.367 1.705 1.367c.45-.562.495-1.318.172-1.913a6.785 6.785 0 0 0 4.87-6.51"
      fill="#6da544"
    />
    <path
      d="M7.826 9.913s0 2.609 2.609 2.609l.521.521H12s.522-1.565 1.565-1.565c0 0 0-1.043 1.044-1.043h1.565s-.522-2.087 2.087-3.652l-1.044-.522s-3.652 2.609-6.26 2.087V9.39H9.913l-.522-.521z"
      fill="#ffda44"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#454545"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > CzechRepublicFlag > renders CzechRepublicFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M10.957 12s-7.435 8.487-7.442 8.485A11.96 11.96 0 0 0 12 24c6.627 0 12-5.373 12-12z"
      fill="#d80027"
    />
    <path
      d="M3.515 3.515c-4.687 4.686-4.687 12.284 0 16.97L12 12z"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.29 10.435h14.507C23.03 4.547 17.995 0 11.898 0c-.896 0-1.768.099-2.608.285zm-3.131 0V1.459A12 12 0 0 0 0 10.435zm0 3.13H0a12 12 0 0 0 6.159 8.976zm3.131 0v10.15c.84.186 1.712.285 2.608.285 6.097 0 11.132-4.547 11.899-10.435z"
      fill="#454545"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > DenmarkFlag > renders DenmarkFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M9.391 10.435h14.507C23.131 4.547 18.097 0 12 0c-.896 0-1.769.099-2.609.285zm-3.13 0V1.459a12 12 0 0 0-6.159 8.976zm0 3.13H.102a12 12 0 0 0 6.159 8.976zm3.13 0v10.15c.84.186 1.713.285 2.609.285 6.097 0 11.131-4.547 11.898-10.435z"
      fill="#d80027"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#444"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > EstoniaFlag > renders EstoniaFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 12c0 1.468.264 2.874.746 4.174L12 16.696l11.254-.522c.482-1.3.746-2.706.746-4.174s-.264-2.874-.746-4.174L12 7.304.746 7.826A12 12 0 0 0 0 12"
      fill="#000"
    />
    <path
      d="M12 0C6.84 0 2.442 3.257.747 7.826h22.507C21.558 3.256 17.16 0 12 0"
      fill="#0052b4"
    />
    <path
      d="M23.254 16.174H.747C2.442 20.744 6.84 24 12 24s9.558-3.256 11.254-7.826"
      fill="#f0f0f0"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FinlandFlag > renders FinlandFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M23.898 10.435H9.391V.285C8.282.531 7.231.93 6.261 1.46v8.976H.1a12 12 0 0 0 0 3.13h6.16v8.976c.97.53 2.021.928 3.13 1.174v-10.15h14.507a12 12 0 0 0 0-3.13"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom className 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="custom-class style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size large 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_large__1q2vtpp0"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size medium 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size small 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_small__1q2vtpp2"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xlarge__1q2vtpp3"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xsmall 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xsmall__1q2vtpp4"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with custom size xxlarge 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_xxlarge__1q2vtpp5"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with disabled state 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#454545"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#444"
    />
  </svg>
</DocumentFragment>
`;

exports[`flags > FranceFlag > renders FranceFlag with hidden aria 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="style_medium__1q2vtpp1"
    height="24"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12"
      fill="#f0f0f0"
    />
    <path
      d="M24 12c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744 21.558 24 17.16 24 12"
      fill="#d80027"
    />
    <path
      d="M0 12c0 5.16 3.257 9.558 7.826 11.254V.746C3.256 2.442 0 6.84 0 12"
      fill="#0052b4"
    />
  </svg>
</DocumentFragment>
`;
